crates/aether-actor-derive/tests/ui/single_handler_cannot_reply.stderr
error[E0599]: no method named `reply` found for mutable reference `&mut WasmCtx<'_>` in the current scope
  --> tests/ui/single_handler_cannot_reply.rs:53:13
   |
53 |         ctx.reply(&Ack { seq: ping.seq });
   |             ^^^^^ method not found in `&mut WasmCtx<'_>`
